V2.0.8
  - Default indexType sind nun Einzelseiten und Übersichtsseiten
  - Eine Index Seite kann nun auch Seiten anderen Artikeltyps auflisten 

V2.0.6
  - ActiveAdmin::Views::IndexAsTree global verfügbar gemacht
  - ActiveAdmin::Views::IndexAsTree eingebaut in Articles, Menues und Settings

V2.0.5
  - Vsitor Model marked as deprecated
  - Author Model marked as deprecated
  - GC Comments Model marked as deprecated
  - Tracking Model (Analytics) marked as deprecated
  - Cleanup Model Menue
  - Moved ArticleTYpe to Submenue of Settings in Active Admin
  - Article Edit Sidebar cleanup: Deprecated ImageModul, Linkchecker
  - Article Navigation: Prev and Next Buttons removed
  - Undo Button hidden, TODO: Rewirte UI
  - Article Edit: Sidebar Image module deprecated
  - Article Edit: Sidebar Link Checker deprecated
  - Article Edit: Sidebar Menu options deprecated
  - Article New cleanup

V2.0.4
  - Cucumber Tests fixed
  - Seo Artikel View added
  - Baumdarstellung der Artikel integriert (Version alpha)
  - Widget.save Model fixed beim speichern
  - Fixed creation of redirektion after article save

V2.0.3
  - Dashboard erweitert um Artikel Suche
  - ActiveAdmin Comments deaktiviert
  - Reihenfolge der Menüpunkte optimiert
  - Author.save bug behoben
  - Expertenmodus entfernt (Artikeltypen übernhemen diese Funktion)
  - Wiederherstellungsfunktion von Artikeltypen

V2.0.2
  - Dashboard reaktiviert (section wird zu colums und panels)
  - ReaktJS Overview Tree repariert
  - Cleanup Widgets (Zeitsteuerung entfernt)

V2.0.1
  - Cleanup Migrations
  - no "rake goldencobra:install:migrations" mehr notwendig, Migrations bleiben in den Engines

V2.0
  - Update auf Ruby 2.2.2
  - Update auf Rails 4.2.3
  - Cleanup Widgets#edit




V1.4.72
  - Goldencobra::Menue: Veraendern des Aktiv/Inaktiv Status eines Menue-Eintrags wird zu allen Abkoemmlingen des Menues weitergegeben.
V1.4.71
  - Redirector: URI.parse ersetzt durch Addressable::URI.parse
V1.4.70