@@ -1,6 +1,7 @@
 V2.0.8
   - Default indexType sind nun Einzelseiten und Übersichtsseiten
   - Eine Index Seite kann nun auch Seiten anderen Artikeltyps auflisten 
+  - Helper Method deprecated: index_of_articles
 
 V2.0.6
   - ActiveAdmin::Views::IndexAsTree global verfügbar gemacht
